<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/finalStats"
        android:id="@+id/textView"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="15dp"
        android:textSize="40dp"
        android:layout_marginBottom="35dp"
        android:textStyle="bold" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/quizName"
        android:id="@+id/quizNameTV"
        android:layout_marginLeft="5dp"
        android:textSize="35dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="Medium Text"
        android:id="@+id/setQuizNameTV"
        android:layout_marginLeft="5dp"
        android:paddingBottom="45dp"
        android:textSize="25dp"
        android:textStyle="bold"
        android:textColor="@color/red" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/finalScore"
        android:id="@+id/textView6"
        android:layout_marginLeft="5dp"
        android:textSize="30dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="Medium Text"
        android:id="@+id/setFinalScoreTV"
        android:layout_marginLeft="5dp"
        android:textSize="25dp"
        android:textStyle="bold"
        android:textColor="@color/blue" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/backToMenuNotSaved"
            android:id="@+id/button"
            android:layout_gravity="bottom"
            android:layout_alignTop="@+id/button2"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_marginLeft="5dp" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/addToLeaderboard"
            android:id="@+id/button2"
            android:layout_gravity="bottom"
            android:layout_marginBottom="59dp"
            android:layout_alignParentBottom="true"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true"
            android:layout_marginRight="5dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:text="@string/name"
            android:id="@+id/textView2"
            android:layout_alignParentTop="true"
            android:layout_alignLeft="@+id/button"
            android:layout_alignStart="@+id/button"
            android:layout_marginTop="43dp"
            android:textSize="30dp"
            android:textColor="#000000" />

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:ems="10"
            android:id="@+id/nameEditText"
            android:layout_alignBottom="@+id/textView2"
            android:layout_toRightOf="@+id/textView2" />
    </RelativeLayout>

</LinearLayout>