<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    android:weightSum="1">

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Outline Quiz"
            android:id="@+id/bOutlineLeaderboard"
            android:layout_weight="1"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Flag Quiz"
            android:id="@+id/bFlagLeaderboard"
            android:layout_weight="1"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Name Quiz"
            android:id="@+id/bNickNameLeaderboard"
            android:layout_weight="1"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp" />
    </LinearLayout>

    <RelativeLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:id="@+id/leaderboardDescription"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:textSize="25dp"
            android:paddingTop="5dp"
            android:paddingBottom="5dp"
            android:textStyle="bold" />
    </RelativeLayout>

    <RelativeLayout
        android:orientation="horizontal"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/userName"
            android:id="@+id/textView5"
            android:paddingBottom="10dp"
            android:textStyle="bold"
            android:textSize="20dp"
            android:textColor="#000000" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/userScore"
            android:id="@+id/textView7"
            android:layout_marginLeft="95dp"
            android:layout_alignParentTop="true"
            android:layout_toRightOf="@+id/textView5"
            android:layout_toEndOf="@+id/textView5"
            android:layout_marginStart="95dp"
            android:textStyle="bold"
            android:textSize="20dp"
            android:textColor="#000000" />
    </RelativeLayout>

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_weight="0.94">

        <FrameLayout
            android:id="@+id/leaderboardFrag"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

        </FrameLayout>

    </LinearLayout>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/backToMenu"
        android:id="@+id/bReturnToMenu"
        android:layout_gravity="center_horizontal" />
</LinearLayout>